# boox_to_anki

./: .gitignore  main.py  pyproject.toml  readme.md
data/: anki_cards.txt
example_data/: anki_cards.txt  test.txt
